@@ -80,6 +80,7 @@ t/data/sample.yml
 t/errors.t
 t/glob-to-regexp.t
 t/grammar.t
+t/harness-bailout.t
 t/harness-subclass.t
 t/harness.t
 t/iterators.t
