@@ -3,6 +3,8 @@ Revision history for Test-Harness
 3.15
         - After discussion with Andy, agreed to clean up the test output
           somewhat.  t/foo.....ok becomes t/foo ... ok
+        - Make Bail out! die instead of exiting. Dies with the same
+          message as 2.64 for (belated) backwards compatibility.
 
 3.14    2008-09-13
         - Created a proper (ha!) API for prove state results and tests.
